--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
         "vuex": "^3.6.2",
         "webpack": "^5.46.0",
         "webpack-cli": "^4.7.2"
+    },
+    "dependencies": {
+        "dayjs": "^1.10.7"
     }
 }
