--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=Grader
 APP_ENV=local
-APP_KEY=base64:aKBwjwBN/TXccHlI3hS04iYVejhYlHgIxllFD59gVlE=
+APP_KEY=base64:AzF0C1YgeoRG3TSJ6r3RLi7ujoglaR/w2lnUMzhNkYg=
 APP_DEBUG=true
-APP_URL=http://grader.local
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -20,7 +20,6 @@ FILESYSTEM_DRIVER=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
-SESSION_DOMAIN=grader.local
 
 MEMCACHED_HOST=127.0.0.1
 
