--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Grader
 APP_ENV=local
 APP_KEY=base64:aKBwjwBN/TXccHlI3hS04iYVejhYlHgIxllFD59gVlE=
 APP_DEBUG=true
-APP_URL=http://grader.local
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -12,7 +12,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=grader
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=hakino0013
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -20,7 +20,6 @@ FILESYSTEM_DRIVER=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
-SESSION_DOMAIN=grader.local
 
 MEMCACHED_HOST=127.0.0.1
 
