--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dependencies": {
         "@morioh/v-quill-editor": "^1.0.2",
         "dayjs": "^1.10.7",
+        "vue-snack": "^0.1.4",
         "vue2-editor": "^2.10.3"
     }
 }
