--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Grader
 APP_ENV=local
 APP_KEY=base64:aKBwjwBN/TXccHlI3hS04iYVejhYlHgIxllFD59gVlE=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://grader.local
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -12,7 +12,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=grader
 DB_USERNAME=root
-DB_PASSWORD=hakino0013
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -20,6 +20,7 @@ FILESYSTEM_DRIVER=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+SESSION_DOMAIN=grader.local
 
 MEMCACHED_HOST=127.0.0.1
 
@@ -28,10 +29,10 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.gmail.com
-MAIL_PORT=587
-MAIL_USERNAME=noreply.smtp.req@gmail.com
-MAIL_PASSWORD=g.gon.280643
+MAIL_HOST=mailhog
+MAIL_PORT=1025
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
