--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
         "stylus-loader": "^6.1.0",
-        "vue": "^2.6.12",
+        "vue": "^2.6.14",
         "vue-chartjs": "^3.5.1",
         "vue-loader": "^15.9.7",
         "vue-router": "^3.5.2",
@@ -33,12 +33,16 @@
         "vuetify": "^2.5.6",
         "vuex": "^3.6.2",
         "webpack": "^5.46.0",
-        "webpack-cli": "^4.7.2"
+        "webpack-cli": "^4.7.2",
+        "xlsx": "^0.15.5"
     },
     "dependencies": {
         "@morioh/v-quill-editor": "^1.0.2",
         "codemirror": "^5.65.3",
         "dayjs": "^1.10.7",
+        "exceljs": "^4.3.0",
+        "file-saver": "^2.0.5",
+        "vue-xlsx": "^0.2.1",
         "vue2-editor": "^2.10.3"
     }
 }
